--- a/assets/style.css
+++ b/assets/style.css
@@ -2,4 +2,6 @@
   margin: 0px;
   padding: 0px;
   border: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
